--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -18,6 +18,9 @@
 - other_formats_links do |f|
   = f.link_to 'Atom', :url => {:key => User.current.rss_key}
 
+:css
+  input.project-search {width: 95%;}
+
 - content_for :sidebar do
   = form_tag({:controller => "search_projects", :action => "index"}, :method => :get,  :id => "query_form") do
     %h3= l(:label_project_plural)
